--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,57 @@
+﻿annotated-types==0.7.0
+anyio==4.11.0
 asgiref==3.10.0
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.4
 colorama==0.4.6
+cryptography==41.0.7
+deprecation==2.1.0
 Django==4.2.25
 djangorestframework==3.16.1
+exceptiongroup==1.3.0
 gitdb==4.0.12
 GitPython==3.1.45
+gotrue==2.12.4
+h11==0.16.0
+h2==4.3.0
+hpack==4.1.0
+httpcore==1.0.9
+httpx==0.27.2
+hyperframe==6.1.0
+idna==3.11
 lizard==1.18.0
+multidict==6.7.0
+packaging==25.0
 pathspec==0.12.1
+postgrest==0.16.11
+propcache==0.4.1
 psycopg2-binary==2.9.11
+pycparser==2.23
+pydantic==2.12.4
+pydantic_core==2.41.5
 PyDriller==2.9
 Pygments==2.19.2
+PyJWT==2.10.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
-setuptools==80.9.0
+realtime==1.0.6
+requests==2.32.5
+six==1.17.0
 smmap==5.0.2
+sniffio==1.3.1
 sqlparse==0.5.3
+storage3==0.7.7
+StrEnum==0.4.15
+supabase==2.6.0
+supabase-functions==2.23.2
+supafunc==0.5.1
 tqdm==4.67.1
 types-pytz==2025.2.0.20250809
+typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
-wheel==0.45.1
-supabase>=2,<3
+urllib3==2.5.0
+websockets==12.0
+yarl==1.22.0
